update style and fitur

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -10,6 +10,16 @@
   --color-foreground: var(--foreground);
   --font-sans: var(--font-geist-sans);
   --font-mono: var(--font-geist-mono);
+  --color-brand-50: #f2f7ec;
+  --color-brand-100: #e1edd7;
+  --color-brand-200: #c5dbb1;
+  --color-brand-300: #a2c484;
+  --color-brand-400: #8bb657;
+  --color-brand-500: #7db03d;
+  --color-brand-600: #628c2f;
+  --color-brand-700: #4b6b24;
+  --color-brand-800: #3a531c;
+  --color-brand-900: #212f10;
 }
 
 @media (prefers-color-scheme: dark) {
